[gd_scene load_steps=5 format=3 uid="uid://e4f5g6h7i8j9k"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_1"]
[ext_resource type="PackedScene" uid="uid://bqj8k3x4m5n6p" path="res://scenes/Paddle.tscn" id="2_1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(1024, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_1")

[node name="Paddle" parent="." instance=ExtResource("2_1")]

[node name="BlocksContainer" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" groups=["walls"] parent="Walls"]
position = Vector2(10, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="StaticBody2D" groups=["walls"] parent="Walls"]
position = Vector2(1014, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_1")

[node name="Ceiling" type="StaticBody2D" groups=["ceiling"] parent="Walls"]
position = Vector2(512, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ceiling"]
shape = SubResource("RectangleShape2D_2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Pontuação: 0"

[node name="LivesLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Vidas: 3"

[node name="GameOverLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
text = "Reiniciar"

[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"]

